--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -7,7 +7,9 @@
   align-items: center;
   height: 1000px;
   margin-top: 100px;
-  background-color: rgb(246, 250, 250);
+  background: linear-gradient(145deg, white, rgb(209, 209, 246));
+  width: 100%;
+  
 }
 
 /* current-balance */
