--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,7 @@
 * {
   padding: 0px;
   margin-top: 0;
+  font-family: sans-serif;
 }
 .top-nav {
   display: flex;
@@ -24,7 +25,7 @@
   background: linear-gradient(45deg, purple, blue);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-weight: 900;
+  font-weight: 600;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
@@ -43,3 +44,62 @@
   border-radius: 40px;
   background: linear-gradient(90deg, rgb(86, 86, 230), purple);
 }
+
+/* bottom nav */
+
+.bottom-nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.icon-tab-wrapper {
+  display: flex;
+  flex-direction: row;
+  position: fixed;
+  bottom: 30px;
+  background-color: white;
+  justify-content: space-between;
+  height: 55px;
+  border-radius: 10px;
+}
+
+.icon-tab {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 80px;
+  border-radius: 10px;
+  transition: 0.3s;
+}
+
+.svg-container svg {
+  width: 22px;
+  stroke: grey;
+}
+.icon-name {
+  font-size: 12px;
+  color: grey;
+}
+
+.icon-tab.active{
+  background: linear-gradient(
+    90deg,rgb(155, 155, 233),
+    rgb(139, 139, 247), rgb(250, 112, 250)
+  );
+  
+}
+.icon-tab.active svg{
+  stroke: white;
+  fill: none;
+}
+.icon-tab.active .icon-name{
+  color: white;
+}
+
+.icon-tab:hover{
+  cursor: pointer;
+  transform: scale3d(1.1,1.1,1.1);
+
+}
+
