Updated Income, thing

--- a/styles/expenseList.css
+++ b/styles/expenseList.css
@@ -157,3 +157,82 @@ h3 {
   color: white;
   font-weight: 600;
 }
+
+
+/* item-list */
+.ei-list{
+  display: flex;
+    flex-direction: column;
+  margin-top: 60px;
+  width: 380px;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+}
+.item-wrapper{
+  background-color: white;
+  display: flex;
+
+  padding: 30px;
+  border-radius: 10px;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+
+
+}
+.item-info{
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.item-name{
+  font-size: 18px;
+
+}
+.icd-wrapper{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+
+}
+.item-category{
+  font-size: 13px;
+  border: solid brown;
+  color: brown;
+  padding: 2px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 7px;
+  background-color: bisque;
+
+}
+.item-date{
+  font-size: 13px;
+  color: gray;
+}
+.item-amount{
+  font-size: 20px;
+  font-weight: 600;
+}
+
+#expense-part{
+  color: rgb(235, 27, 27);
+}
+#balance-part{
+  color: rgb(29, 197, 29);
+}
+
+.item-amount-edit{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+ gap: 15px;
+}
+
+.item-delete:hover{
+  cursor: pointer;
+}
