--- a/styles/wishlist.css
+++ b/styles/wishlist.css
@@ -156,10 +156,9 @@
   font-weight: 500;
   border-radius: 7px;
   border: rgb(66, 160, 7) solid 0.9px;
-  
 }
 #a-100 {
-margin-left: 7px;
+  margin-left: 7px;
   background-color: rgb(177, 224, 253);
   font-size: 14px;
   padding: 10px 10px;
@@ -170,15 +169,15 @@ margin-left: 7px;
 }
 
 /* add-button */
-.wishlist-add-amount{
-    margin-top: 20px;
-display: flex;
-justify-content: center;
-align-items: center;
-gap: 10px;
+.wishlist-add-amount {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
-.add-button{
-    font-size: 16px;
+.add-button {
+  font-size: 16px;
   background: linear-gradient(
     90deg,
     rgb(237, 54, 213),
@@ -188,11 +187,50 @@ gap: 10px;
   padding: 10px 15px;
   border-radius: 15px;
   color: white;
-
 }
 
-.wishlist-add-amount input{
-    border: none;
-    width: fit-content;
-    font-size: 14px;
+.wishlist-add-amount input {
+  border: none;
+  width: fit-content;
+  font-size: 14px;
+}
+
+/* wishlist-adding */
+
+.wishlist-adding-box {
+  width: 300px;
+  background-color: white;
+  border-radius: 10px;
+  padding: 30px 30px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 18px;
+}
+.wab-text {
+  background: linear-gradient(45deg, purple, blue);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 600;
+}
+
+.wishlist-adding-box input {
+  margin-top: 5px;
+  width: 100%;
+  border: grey 0.2px solid;
+  height: 29px;
+  border-radius: 5px;
+  padding-left: 7px;
+}
+
+.wab-add{
+  margin-top: 10px;
+  margin-left: 100px;
+  font-size: 16px;
+  width: 60px;
+  background: linear-gradient(45deg, purple, rgb(132, 47, 216));
+  padding: 8px 10px 8px 20px;
+  border-radius: 10px;
+  color: white;
 }
